# example-workspace-rs

./: .dockerignore  Cargo.toml  README.md  rustfmt.toml  theotherserver.dockerfile  theserver.dockerfile
crates/thelib/: CHANGELOG.md  Cargo.toml
crates/thelib/src/: lib.rs
crates/theotherserver/: Cargo.toml
crates/theotherserver/src/: main.rs
crates/theserver/: CHANGELOG.md  Cargo.toml
crates/theserver/src/: main.rs
