[package]
name = "glennib-thelib"
version = "0.1.0"
edition = "2021"
authors = ["Glenn Bitar <glennbitar@gmail.com>"]
description = "Test library for testing release-plz"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
