[package]
name = "glennib-theserver"
version = "0.1.0"
edition = "2021"
publish = false
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
thelib = { package = "glennib-thelib", version = "0.1.1", path = "../thelib" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
